[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Fonts/x12y16pxLineLinker.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Stage" parent="." instance=ExtResource( 2 )]

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="GameUI"]
anchor_right = 1.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
script = ExtResource( 5 )

[node name="ViewGrazingTimer" type="Timer" parent="GameUI/ScoreLabel"]
wait_time = 0.5
one_shot = true

[connection signal="add_score" from="Player" to="GameUI/ScoreLabel" method="_on_Player_add_score"]
[connection signal="timeout" from="GameUI/ScoreLabel/ViewGrazingTimer" to="GameUI/ScoreLabel" method="_on_ViewGrazingTimer_timeout"]
